# clime

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
attrsargparser/: attrsargparser.py  attrsarparser_exceptions.py
clime/: __init__.py  clime.py  clime_exceptions.py  configs.py  parseonce_field_transformer.py  utilities.py
docs/: about.md  index.md
docs/tutorials/: string_tutorial.md
docs_src/booleans/: tutorial_001.py
docs_src/enums/: tutorial_001.py
docs_src/help/: tutorial_001.py
docs_src/integers_floats_and_other_simple_classes/: tutorial_001.py  tutorial_002.py  tutorial_003.py  tutorial_004.py
docs_src/intergers/: tutorial_001.py
docs_src/sample_usage/: tutorial_000.py  tutorial_001.py  tutorial_002.py  tutorial_003.py
docs_src/strings/: tutorial_001.py  tutorial_002.py  tutorial_003.py
docs_src/supercharge_with_attrib/: tutorial_001.py  tutorial_002.py  tutorial_003.py
docs_src/usage/: tutorial_001.py
parseonce/: __init__.py  configs.py  onceparser.py  parseonce.py  parseonce_exceptions.py  parseonce_field_transformer.py  utilities.py
search/: search_index.json
test_docs_src/: conftest.py
test_docs_src/test_booleans/: test_tutorial_001.py
test_docs_src/test_itergers/: test_tutorial_001.py
tests/: test_attrs_argparser_field_transformers.py  test_attrsargparser.py  test_bool.py  test_clime_field_transformer.py  test_enums.py  test_float.py  test_how_fields_are_added_to_parser.py  test_int.py  test_metadata.py  test_parseonce_field_transformer.py  test_str.py
(+57 files in other folders)
